--- a/css/footer.css
+++ b/css/footer.css
@@ -25,6 +25,7 @@
   background-repeat: no-repeat;
   background-position: 0 -3px;
   padding-left: 65px;
+  margin-bottom: 11px;
 }
 
 .footer__item-mail {
