--- a/css/review.css
+++ b/css/review.css
@@ -9,6 +9,10 @@
   margin-bottom: 50px;
 }
 
+.review__list-nikita {
+  margin-bottom: 0;
+}
+
 .review__name {
   text-align: center;
   font-weight: 400;
