--- a/css/form.css
+++ b/css/form.css
@@ -1,11 +1,74 @@
 .form {
   padding-top: 60px;
+  background-color: #440F51;
+}
+
+.form__wrapper {
+  width: 1080px;
+  margin: 0 auto;
 }
 
 .form__title {
-  padding: 10px 17px
+  border: none;
+  padding: 10px 17px;
+  margin-bottom: 60px;
+}
+
+.form__name {
+  text-align: center;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  margin-bottom: 40px;
+}
+
+.form__btn-room {
+  padding: 7px 15px;
+  border-radius: 8px;
+  background-color: #fff;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 40px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #000;
+  border: none;
+}
+
+.form__btn {
+  display: flex;
+  justify-content: space-between;
+}
+
+.form__kit-enterteiment {
+  display: flex;
+  justify-content: space-between;
+}
+
+.form__kit {
+  display: flex;
+  flex-direction: column;
+}
+
+.form__kit-title {
+  margin-bottom: 23px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+}
+
+.form__input-kit {
+  margin-bottom: 20px;
+}
+
+.form__title-forms {
+  display: flex;
+  justify-content: space-between;
 }
 
 .form__input-name {
-  padding-right: 10px;
+  display: block;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
 }
