--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,9 @@
 @import "normalize.css";
 @import "global.css";
 @import "header.css";
+@import "hero.css";
+@import "friends.css";
+@import "form.css";
 @import "rooms.css";
 @import "about.css";
 @import "faq.css";
