--- a/css/rooms.css
+++ b/css/rooms.css
@@ -1,33 +1,31 @@
-.rooms__name {
-  margin-bottom: 60px;
-}
-
-.rooms__name:last-child {
-  margin-bottom: 0;
+.rooms__list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .rooms-star{
   background-image: url("../img/starwars.jpg");
-  width: 1180px;
-  height: 710px;
+  width: 580px;
+  height: 349px;
 }
 
 .rooms-west {
   background-image: url("../img/west.jpg");
-  width: 1180px;
-  height: 710px;
+  width: 580px;
+  height: 349px;
 }
 
 .rooms-neon {
   background-image: url("../img/neon.jpg");
-  width: 1180px;
-  height: 710px;
+  width: 580px;
+  height: 349px;
 }
 
 .rooms-vibe {
   background-image: url("../img/80.jpg");
-  width: 1180px;
-  height: 710px;
+  width: 580px;
+  height: 349px;
 }
 
 .room {
